package edu.hitsz.aircraft;

import edu.hitsz.application.Main;
import edu.hitsz.bullet.BaseBullet;
import edu.hitsz.bullet.EnemyBullet;

import java.util.LinkedList;
import java.util.List;

public class BossEnemy extends AbstractAircraft implements EnemyAircraftProduct{
    public BossEnemy(int locationX,int locationY,int speddX,int speedY,int hp){
        super(locationX,locationY,speddX,speedY,hp);
    }

    @Override
    public void forward() {
        super.forward();
        // 判定 y 轴向下飞行出界
        if (locationY >= Main.WINDOW_HEIGHT ) {
            vanish();
        }
    }

    @Override
    public List<BaseBullet> shoot() {
        return new LinkedList<>();
    }

    @Override
    public BossEnemy creatbossenemy() {
        return null;
    }

    @Override
    public EliteEnemy createliteenemy() {
        return null;
    }

    @Override
    public MobEnemy creatmobenemy() {
        return null;
    }
}
