package edu.hitsz.aircraft;

public interface EnemyAircraftProduct {
    EliteEnemy createliteenemy();
    MobEnemy creatmobenemy();
    BossEnemy creatbossenemy();
}
