@startuml
'https://plantuml.com/class-diagram

interface EnemyAircraftFactory{
    + creatEnemyProduct():EnemyAircraftProduct
}

interface EnemyAircraftProduct{
    + createliteenemy():EliteEnemy
    + creatmobnemy():MobEnemy
    + creatbossenemy():BossEnemy
}

EnemyAircraftProduct <|.. EliteEnemy
EnemyAircraftProduct <|.. MobEnemy
EnemyAircraftProduct <|.. BossEnemy

EnemyAircraftFactory <|.. CreatEliteEnemy
EnemyAircraftFactory <|.. CreatMobEnemy
EnemyAircraftFactory <|.. CreatBossEnemy

CreatMobEnemy <.. MobEnemy
CreatEliteEnemy <.. EliteEnemy
CreatBossEnemy <.. BossEnemy

class CreatEliteEnemy{
    + creatEnemyProduct():EnemyAircraftProduct
}

class CreatMobEnemy{
    + creatEnemyProduct():EnemyAircraftProduct
}

class CreatBossEnemy{
    + creatEnemyProduct():EnemyAircraftProduct
}

class MobEnemy {
    + MobEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<BaseBullet>
    + creatmobnemy():MobEnemy
    + createliteenemy():EliteEnemy
    + creatbossenemy():BossEnemy
}

class EliteEnemy {
    + EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp):void
    + forward():void
    + shoot():List<BaseBullet>
    + createliteenemy():EliteEnemy
    + creatmobnemy():MobEnemy
    + creatbossenemy():BossEnemy
}

class BossEnemy{
    + BossEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<BaseBullet>
    + createliteenemy():EliteEnemy
    + creatmobnemy():MobEnemy
    + creatbossenemy():BossEnemy
}

@enduml